logs/Slang/generated/keywords/5.6.2--keyword_shortreal.sv.log
name: keyword_shortreal
description: The 'shortreal' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_shortreal.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_shortreal.sv:8:8: error: expected declarator
    bit shortreal;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_shortreal.sv:8:18: error: expected declarator
    bit shortreal;
                 ^
